Fixed layout bugs
git-svn-id: http://nt-svn-jira.vdc.csc.com/HPF/Implementation/Source Code@3213 6d9d970a-e046-46de-96ce-fbc9f6c46dd9

--- a/HPF.FutureState/HPF.FutureState.Web/Styles/HPF.css
+++ b/HPF.FutureState/HPF.FutureState.Web/Styles/HPF.css
@@ -52,14 +52,14 @@ p
     color: #2271A0;
     font-size: 11px;
     font-weight: bold;
-    vertical-align: top;
+    
 }
 .Text
 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     color: Black;
     font-size: 10px;
-    vertical-align: top;
+    
     padding:0;
 }
 .MyButton
